test/cli/test-validating-policy/conditional-delete-operation/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: deny-delete-test
policies:
- policy.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: deny-create-production-pod
  resourceOperation: CREATE
  resources:
  - prod-app
  result: fail
- kind: Pod
  policy: deny-delete-production-pod
  resourceOperation: DELETE
  resources:
  - prod-app
  result: fail
variables: values.yaml
